(rating): add rating component

--- a/src/global/variables.css
+++ b/src/global/variables.css
@@ -14,6 +14,15 @@
   --progress-arc-color: #00aa00;
   --progress-arc-rest-color: transparent;
 
+  --rating-background: #FFFFFF;
+  --rating-color: #666666;
+  --rating-font-weight: bold;
+  --rating-stamina-arc-very-low: #DD4140;
+  --rating-stamina-arc-low: #F5A104;
+  --rating-stamina-arc-high: #F1C40A;
+  --rating-stamina-arc-very-high: #31A94B;
+  --rating-stamina-arc-rest: #CCCCCC;
+
   --tooltip-background: rgba(0, 0, 0, .75);
   --tooltip-color: white;
   --tooltip-font-size: 12px;
