(flip): add flip component

--- a/src/global/variables.css
+++ b/src/global/variables.css
@@ -34,4 +34,8 @@
   --tooltop-border-radius: 3px;
   --tooltip-pointer-events: none;
   --tooltip-delay: 0s;
+
+  --flip-height: auto;
+  --flip-width: auto;
+  --flip-duration: 1s;
 }
