(chore): rename package and improved readme's

--- a/src/global/variables.css
+++ b/src/global/variables.css
@@ -31,8 +31,8 @@
   --tooltip-padding: 5px 10px;
   --tooltip-box-shadow: none;
   --tooltip-max-width: 400px;
-  --tooltop-arrow-size: 7px;
-  --tooltop-border-radius: 3px;
+  --tooltip-arrow-size: 7px;
+  --tooltip-border-radius: 3px;
   --tooltip-pointer-events: none;
   --tooltip-delay: 0s;
 
