(chore): change component prefix to hattrick-

--- a/src/components/rating/rating.scss
+++ b/src/components/rating/rating.scss
@@ -17,7 +17,7 @@
   --progress-arc-stroke-width: 3px;
 }
 
-ht-progress-arc {
+hattrick-progress-arc {
   position: absolute;
   top: 0;
   left: 0;
