--- a/src/components/avatar/avatar.scss
+++ b/src/components/avatar/avatar.scss
@@ -6,17 +6,17 @@
   width: calc(92px * var(--avatar-size, 1));
   height: calc(123px * var(--avatar-size, 1));
 }
-:host(.ht-avatar-has-facecard) {
+:host(.has-facecard) {
   width: calc(110px * var(--avatar-size, 1));
   height: calc(155px * var(--avatar-size, 1));
 }
 
-:host(.ht-avatar-round),
-:host(.ht-avatar-square) {
+:host(.round),
+:host(.square) {
   height: calc(92px * var(--avatar-size, 1));
 }
-:host(.ht-avatar-has-facecard.ht-avatar-round),
-:host(.ht-avatar-has-facecard.ht-avatar-square) {
+:host(.has-facecard.round),
+:host(.has-facecard.square) {
   height: calc(110px * var(--avatar-size, 1));
 }
 
@@ -26,7 +26,7 @@ div {
   width: 100%;
   height: 100%;
 
-  :host(.ht-avatar-round) & {
+  :host(.round) & {
     border-radius: 100%;
   }
 }
