--- a/src/components/rating/rating.scss
+++ b/src/components/rating/rating.scss
@@ -1,8 +1,8 @@
 :host {
   position: relative;
   display: inline-flex;
-  background: var(--rating-background, white);
-  color: var(--rating-color, #666);
+  background: var(--rating-background, #FFFFFF);
+  color: var(--rating-color, #666666);
   border-radius: 100% 100% 100% 100%;
   font-weight: var(--rating-font-weight, bold);
 
