--- a/src/global/variables.css
+++ b/src/global/variables.css
@@ -35,6 +35,7 @@
   --tooltip-border-radius: 3px;
   --tooltip-pointer-events: none;
   --tooltip-delay: 0s;
+  --tooltip-offset: 0;
 
   --flip-height: auto;
   --flip-width: auto;
