(match-clock): monospace numbers

--- a/src/components/match-clock/match-clock.scss
+++ b/src/components/match-clock/match-clock.scss
@@ -1,3 +1,9 @@
 :host {
   font-variant-numeric: tabular-nums lining-nums;
 }
+
+monospace {
+  display: inline-block;
+  width: var(--match-clock-monospace-width, auto);
+  text-align: center;
+}
