--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -25,16 +25,15 @@ div {
   overflow: hidden;
   width: 100%;
   height: 100%;
-
-  :host(.round) & {
-    border-radius: 100%;
-  }
+}
+:host(.round) div {
+  border-radius: 100%;
 }
 img {
   position: absolute;
 }
 
-
+/*
 // background-color: rgba(lightgrey, 1);
 
 // &:after {
@@ -60,3 +59,4 @@ img {
 //     background-position: 350% 0;
 //   }
 // }
+*/
