--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -29,6 +29,22 @@
   box-shadow: var(--avatar-shadow, grey 0px 0px 6px);
 }
 
+/* :host(.avatarnew:not(.square):not(.round)) div {
+  width: calc(92px * 1.26 * var(--avatar-size, 1));
+  height: calc(123px * 1.26 * var(--avatar-size, 1));
+  margin-left: -13%;
+  position: relative;
+}
+:host(.avatarnew) img[src*="res.hattrick.org"] {
+  margin-top: 38%;
+  margin-left: 9.5%;
+}
+:host(.avatarnew:not(.square):not(.round)) img[src*="res.hattrick.org"] {
+  margin-top: 22%;
+  margin-left: 9.5%;
+} */
+
+
 /* div {
   position: relative;
   overflow: hidden;
@@ -41,8 +57,17 @@
 img {
   position: absolute;
 
-  max-width: 92px;
-  max-height: 123px;
+  /* max-width: 92px;
+  max-height: 123px; */
+}
+
+/* :host(.avatarnew) img:not([src*="backgrounds"]):not([src*="res.hattrick.org"]) {
+  transform: scale(1.3);
+  transform-origin: center 4%;
+} */
+
+:host(.avatarnew) img[src*="res.hattrick.org"] {
+  margin-top: 28%;
 }
 
 /*
